tests/predicates-inferred/predicates-inferred.exp
Error: sanity-multi-params.js:10
 10:     return x;
                ^ array type. This type is incompatible with the expected return type of
  8: function foo(x: string | Array<string>): string {
                                              ^^^^^^ string

Error: sanity-multi-params.js:12
 12:     return x.join();
                  ^^^^ property `join`. Property not found in
 12:     return x.join();
                ^ String

Error: sanity-ordering.js:7
  7:   (obj.page: Object);
        ^^^^^^^^ Cannot cast property `page` to object type because null or undefined [1] is incompatible with object type [2].
  References:
    7:   (obj.page: Object);
          ^^^^^^^^ [1]: null or undefined
    7:   (obj.page: Object);
                    ^^^^^^ [2]: object type

Error: sanity-ordering.js:15
 15:     head = head[key] || create && (head[key] = {});
                ^^^^^^^^^ computed property. Computed property/element cannot be accessed on possibly undefined value
 15:     head = head[key] || create && (head[key] = {});
                ^^^^ undefined

Error: sanity-ordering.js:15
 15:     head = head[key] || create && (head[key] = {});
                                        ^^^^^^^^^ assignment of computed property/element. Computed property/element cannot be assigned on possibly undefined value
 15:     head = head[key] || create && (head[key] = {});
                                        ^^^^^^^^^ undefined

Error: sanity-unbound-var.js:13
 13:     return x;
                ^ array type. This type is incompatible with the expected return type of
 11: function foo(x: string | Array<string>): string {
                                              ^^^^^^ string

Error: sanity-unbound-var.js:15
 15:     return x.join();
                  ^^^^ property `join`. Property not found in
 15:     return x.join();
                ^ String

Error: sanity.js:5
  5: function check(y): %checks(typeof y === "string") {
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot declare predicate when a function body is present.

Error: sanity.js:16
                                             v
 16: function indirect_is_number(y): %checks {
 17:   var y = 1;
 18:   return typeof y === "number";
 19: }
     ^ Invalid body for predicate function. Expected a simple return statement as body.


Found 9 errors
